--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,1 +1,162 @@
-//
+@font-face {
+  font-family: myFirstFont;
+  src: url('/font/DDCHardware-Regular.otf');
+}
+
+@font-face {
+  font-family: mySecondFont;
+  src: url('/font/HelveticaNeue.ttc');
+}
+
+@font-face {
+  font-family: myThirdFont;
+  src: url('/font/MyriadPro-Regular.otf');
+}
+
+
+hr {
+	border-top: 5px solid #CD0000;
+	border-collapse: collapse;
+	padding: 0;
+	margin-top: 30px;
+}
+header {
+	background-image: url('/images/banner.jpg');
+	background-position: 0 80%;
+	background-size: cover;
+	min-height: 500px;
+	font-family: 'myFirstFont';
+	box-shadow: inset 0 0 0 1000px rgba(255, 255, 255, 0.3);
+	h1{
+		color: #CD0000;
+		font-size: 150px;
+		font-weight: bolder;
+	}
+	h2{
+		color: white;
+		font-size: 60px;
+		font-weight: bolder;
+	}
+	button {
+		background-color: #CD0000;
+		border: none;
+		color: white;
+		padding: 5px 10px;
+		font-family: 'myFirstFont';
+		font-weight: bolder;
+		border-radius: 5px;
+	}
+}
+
+nav{
+	padding-top: 10px;
+	padding-bottom: 10px;
+	background-color: #CD0000;
+	font-family: 'myFirstFont';
+	color: white;
+	font-weight: bolder;
+	font-size: 24px;
+	a{
+		color: white;
+		&:hover{
+			color: white;
+		}
+	}
+	// .nav-item:not(:last-child){
+	// 	border-right: 5px solid white;
+	// }
+}
+
+.about{
+	background-image: url('/images/about.jpeg');
+	padding: 80px 0;
+	background-size: cover;
+	min-height: 500px;
+	font-family: 'myThirdFont';
+	box-shadow: inset 0 0 0 1000px rgba(255, 255, 255, 0.7);
+	.about-img{
+		background-image: url('/images/about-left.jpg');
+		background-size: cover;
+		height: 380px;
+	}
+	.about-text{
+		height: 380px;
+		padding-left: 80px;
+		.title{
+			font-family: 'myFirstFont';
+			color: #CD0000;
+			font-weight: bolder;
+			font-size: 48px;
+		}
+		p{
+			line-height: 32px;
+			font-size: 18px;
+			padding-bottom: 20px;
+		}
+	}
+
+}
+
+.exhibitors{
+	padding-top: 80px;
+	.title{
+		font-family: 'myFirstFont';
+		color: #CD0000;
+		font-weight: bolder;
+		font-size: 28px;
+	}
+	button{
+		padding-left: 30px;
+		padding-right: 30px;
+	}
+	.exhibitor-images{
+		background-image: url('/images/JNTO_logo_1.jpg');
+		background-size: cover;
+		min-height: 800px;
+		background-repeat: no-repeat;
+	}
+
+
+
+}
+
+.presentors{
+	.title{
+		font-family: 'myFirstFont';
+		color: #CD0000;
+		font-weight: bolder;
+		font-size: 28px;
+	}
+	button{
+		padding-left: 30px;
+		padding-right: 30px;
+	}
+	.exhibitor-images{
+		background-image: url('/images/JNTO_logo-2.jpg');
+		background-size: cover;
+		min-height: 900px;
+		background-repeat: no-repeat;
+		box-shadow: inset 0 0 0 1000px rgba(255, 255, 255, 0.2);
+	}
+
+
+
+}
+
+.bottom{
+	background-image: url('/images/bottom.jpeg');
+		background-size: cover;
+		background-position: bottom right;
+		min-height: 400px;
+		background-repeat: no-repeat;
+}
+
+footer{
+	padding-top: 20px;
+	padding-bottom: 20px;
+	background-color: #CD0000;
+	font-family: 'myThirdFont';
+	font-weight: 200;
+	color: white;
+	font-size: 18px;
+}
