--- a/public/css/contact.css
+++ b/public/css/contact.css
@@ -69,7 +69,7 @@ header button {
 .contant-page .my-form form {
   background-color: white;
   padding: 50px;
-  border-radius: 10px;
+  border-radius: 30px;
 }
 
 .contant-page .my-form form .header {
@@ -83,20 +83,55 @@ header button {
   color: #CD0000;
 }
 
+.contant-page .my-form form .logos {
+  border-bottom: 5px solid black;
+}
+
 .contant-page .my-form form .logo-left {
-  background-image: url("/images/airCanada.png");
+  background-image: url("/images/JNTO.png");
   background-position: center;
   background-repeat: no-repeat;
   background-size: contain;
-  height: 200px;
+  min-height: 200px;
+  min-width: 200px;
 }
 
 .contant-page .my-form form .logo-right {
-  background-image: url("/images/airCanada.png");
+  background-image: url("/images/tokyo.png");
   background-position: center;
   background-repeat: no-repeat;
   background-size: contain;
-  height: 200px;
+  min-height: 200px;
+  min-width: 200px;
+}
+
+.contant-page .my-form form .form-footer p {
+  font-size: 18px;
+  line-height: 18px;
+  text-transform: uppercase;
+  color: #CD0000;
+  font-weight: bolder;
+}
+
+.contant-page .my-form form .form-footer .row {
+  padding-left: 15px;
+  padding-right: 15px;
+}
+
+.contant-page .my-form form .form-footer button {
+  height: 36px;
+}
+
+.contant-page .my-form form .form-check {
+  padding-top: 15px;
+  padding-bottom: 15px;
+}
+
+.contant-page .my-form form .form-check label {
+  font-size: 14px;
+  text-transform: uppercase;
+  font-weight: bolder;
+  padding-right: 200px;
 }
 
 footer {
