--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,18 +1,3 @@
-@font-face {
-  font-family: myFirstFont;
-  src: url("/font/DDCHardware-Regular.otf");
-}
-
-@font-face {
-  font-family: mySecondFont;
-  src: url("/font/HelveticaNeue.ttc");
-}
-
-@font-face {
-  font-family: myThirdFont;
-  src: url("/font/MyriadPro-Regular.otf");
-}
-
 hr {
   border-top: 5px solid #CD0000;
   border-collapse: collapse;
@@ -25,7 +10,7 @@ header {
   background-position: 0 80%;
   background-size: cover;
   min-height: 500px;
-  font-family: "myFirstFont";
+  font-family: "Helvetic";
   box-shadow: inset 0 0 0 1000px rgba(255, 255, 255, 0.3);
 }
 
@@ -46,27 +31,9 @@ header button {
   border: none;
   color: white;
   padding: 5px 10px;
-  font-family: "myFirstFont";
+  font-family: "Helvetic";
   font-weight: bolder;
   border-radius: 5px;
-}
-
-nav {
-  padding-top: 10px;
-  padding-bottom: 10px;
-  background-color: #CD0000;
-  font-family: "myFirstFont";
-  color: white;
-  font-weight: bolder;
-  font-size: 24px;
-}
-
-nav a {
-  color: white;
-}
-
-nav a:hover {
-  color: white;
 }
 
 .about {
@@ -74,7 +41,7 @@ nav a:hover {
   padding: 80px 0;
   background-size: cover;
   min-height: 500px;
-  font-family: "myThirdFont";
+  font-family: "Helvetic";
   box-shadow: inset 0 0 0 1000px rgba(255, 255, 255, 0.7);
 }
 
@@ -90,7 +57,7 @@ nav a:hover {
 }
 
 .about .about-text .title {
-  font-family: "myFirstFont";
+  font-family: "Helvetic";
   color: #CD0000;
   font-weight: bolder;
   font-size: 48px;
@@ -107,7 +74,7 @@ nav a:hover {
 }
 
 .exhibitors .title {
-  font-family: "myFirstFont";
+  font-family: "Helvetic";
   color: #CD0000;
   font-weight: bolder;
   font-size: 28px;
@@ -125,19 +92,19 @@ nav a:hover {
   background-repeat: no-repeat;
 }
 
-.presentors .title {
-  font-family: "myFirstFont";
+.Presenters .title {
+  font-family: "Helvetic";
   color: #CD0000;
   font-weight: bolder;
   font-size: 28px;
 }
 
-.presentors button {
+.Presenters button {
   padding-left: 30px;
   padding-right: 30px;
 }
 
-.presentors .exhibitor-images {
+.Presenters .exhibitor-images {
   background-image: url("/images/JNTO_logo-2.jpg");
   background-size: cover;
   min-height: 900px;
@@ -157,7 +124,7 @@ footer {
   padding-top: 20px;
   padding-bottom: 20px;
   background-color: #CD0000;
-  font-family: "myThirdFont";
+  font-family: "Helvetic";
   font-weight: 200;
   color: white;
   font-size: 18px;
