--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,19 +1,3 @@
-@font-face {
-  font-family: myFirstFont;
-  src: url('/font/DDCHardware-Regular.otf');
-}
-
-@font-face {
-  font-family: mySecondFont;
-  src: url('/font/HelveticaNeue.ttc');
-}
-
-@font-face {
-  font-family: myThirdFont;
-  src: url('/font/MyriadPro-Regular.otf');
-}
-
-
 hr {
 	border-top: 5px solid #CD0000;
 	border-collapse: collapse;
@@ -25,7 +9,7 @@ header {
 	background-position: 0 80%;
 	background-size: cover;
 	min-height: 500px;
-	font-family: 'myFirstFont';
+	font-family: 'Helvetic';
 	box-shadow: inset 0 0 0 1000px rgba(255, 255, 255, 0.3);
 	h1{
 		color: #CD0000;
@@ -42,37 +26,20 @@ header {
 		border: none;
 		color: white;
 		padding: 5px 10px;
-		font-family: 'myFirstFont';
+		font-family: 'Helvetic';
 		font-weight: bolder;
 		border-radius: 5px;
 	}
 }
 
-nav{
-	padding-top: 10px;
-	padding-bottom: 10px;
-	background-color: #CD0000;
-	font-family: 'myFirstFont';
-	color: white;
-	font-weight: bolder;
-	font-size: 24px;
-	a{
-		color: white;
-		&:hover{
-			color: white;
-		}
-	}
-	// .nav-item:not(:last-child){
-	// 	border-right: 5px solid white;
-	// }
-}
+
 
 .about{
 	background-image: url('/images/about.jpeg');
 	padding: 80px 0;
 	background-size: cover;
 	min-height: 500px;
-	font-family: 'myThirdFont';
+	font-family: 'Helvetic';
 	box-shadow: inset 0 0 0 1000px rgba(255, 255, 255, 0.7);
 	.about-img{
 		background-image: url('/images/about-left.jpg');
@@ -83,7 +50,7 @@ nav{
 		height: 380px;
 		padding-left: 80px;
 		.title{
-			font-family: 'myFirstFont';
+			font-family: 'Helvetic';
 			color: #CD0000;
 			font-weight: bolder;
 			font-size: 48px;
@@ -100,7 +67,7 @@ nav{
 .exhibitors{
 	padding-top: 80px;
 	.title{
-		font-family: 'myFirstFont';
+		font-family: 'Helvetic';
 		color: #CD0000;
 		font-weight: bolder;
 		font-size: 28px;
@@ -120,9 +87,9 @@ nav{
 
 }
 
-.presentors{
+.Presenters{
 	.title{
-		font-family: 'myFirstFont';
+		font-family: 'Helvetic';
 		color: #CD0000;
 		font-weight: bolder;
 		font-size: 28px;
@@ -155,7 +122,7 @@ footer{
 	padding-top: 20px;
 	padding-bottom: 20px;
 	background-color: #CD0000;
-	font-family: 'myThirdFont';
+	font-family: 'Helvetic';
 	font-weight: 200;
 	color: white;
 	font-size: 18px;
