--- a/resources/sass/contact.scss
+++ b/resources/sass/contact.scss
@@ -1,18 +1,3 @@
-@font-face {
-  font-family: myFirstFont;
-  src: url('/font/DDCHardware-Regular.otf');
-}
-
-@font-face {
-  font-family: mySecondFont;
-  src: url('/font/HelveticaNeue.ttc');
-}
-
-@font-face {
-  font-family: myThirdFont;
-  src: url('/font/MyriadPro-Regular.otf');
-}
-
 
 hr {
 	border-top: 5px solid #CD0000;
@@ -21,10 +6,10 @@ hr {
 	margin-top: 30px;
 }
 header {
-	background-image: url('/images/presentors.jpg');
+	background-image: url('/images/Presenters.jpg');
 	background-size: cover;
-	min-height: 800px;
-	font-family: 'myFirstFont';
+	min-height: 500px;
+	font-family: 'Helvetic';
 	box-shadow: inset 0 0 0 1000px rgba(255, 255, 255, 0.1);
 	h1{
 		color: #CD0000;
@@ -41,96 +26,20 @@ header {
 		border: none;
 		color: white;
 		padding: 5px 10px;
-		font-family: 'myFirstFont';
+		font-family: 'Helvetic';
 		font-weight: bolder;
 		border-radius: 5px;
 	}
 }
 .contant-page{
 	background-color: #CD0000;
-	min-height: 900px;
-	.my-form{
-		position: absolute;
-		top: 40%;
-		left: 34%;
-		.title{
-			color: white;
-			font-size: 48px;
-			font-family: 'myFirstFont';
-			margin-bottom: 20px;
-		}
-		form{
-			background-color: white;
-			padding: 50px;
-			border-radius: 30px;
-			.header{
-				font-family: 'myFirstFont';
-				font-weight: bolder;
-				margin-bottom: 30px;
-				text-transform: uppercase;
-				h2{
-					color: #CD0000;
-				}
-			}
-			.logos{
-				border-bottom: 5px solid black;
-			}
-			.logo-left{
-				background-image: url('/images/JNTO.png');
-				background-position: center;
-				background-repeat: no-repeat;
-				background-size: contain;
-				min-height: 200px;
-				min-width: 200px;;
-			}
-			.logo-right{
-				background-image: url('/images/tokyo.png');
-				background-position: center;
-				background-repeat: no-repeat;
-				background-size: contain;
-				min-height: 200px;
-				min-width: 200px;;
-			}
-
-			.form-footer{
-				p{
-					font-size: 18px;
-					line-height: 18px;
-					text-transform: uppercase;
-					color: #CD0000;
-					font-weight: bolder;
-				}
-				.row{
-					padding-left: 15px;
-					padding-right: 15px;
-				}
-				button{
-					height: 36px;
-				}
-			}
-			.form-check{
-				padding-top: 15px;
-				padding-bottom: 15px;
-				label{
-					font-size: 14px;
-					text-transform: uppercase;
-					font-weight: bolder;
-					padding-right: 200px;
-
-				}
-				
-			}
-		}
-		
-	}
-	
+	min-height: 500px;	
 }
-
 footer{
 	padding-top: 20px;
 	padding-bottom: 20px;
 	background-color: #CD0000;
-	font-family: 'myThirdFont';
+	font-family: 'Helvetic';
 	font-weight: 200;
 	color: white;
 	font-size: 18px;
