--- a/resources/sass/presenters.scss
+++ b/resources/sass/presenters.scss
@@ -1,5 +1,5 @@
 @font-face {
-  font-family: myFirstFont;
+  font-family: Helvetic;
   src: url('/font/DDCHardware-Regular.otf');
 }
 
@@ -9,7 +9,7 @@
 }
 
 @font-face {
-  font-family: myThirdFont;
+  font-family: Helvetic;
   src: url('/font/MyriadPro-Regular.otf');
 }
 
@@ -21,10 +21,10 @@ hr {
 	margin-top: 30px;
 }
 header {
-	background-image: url('/images/presentors.jpg');
+	background-image: url('/images/Presenters.jpg');
 	background-size: cover;
 	min-height: 550px;
-	font-family: 'myFirstFont';
+	font-family: 'Helvetic';
 	box-shadow: inset 0 0 0 1000px rgba(255, 255, 255, 0.1);
 	h1{
 		color: #CD0000;
@@ -41,7 +41,7 @@ header {
 		border: none;
 		color: white;
 		padding: 5px 10px;
-		font-family: 'myFirstFont';
+		font-family: 'Helvetic';
 		font-weight: bolder;
 		border-radius: 5px;
 	}
@@ -51,7 +51,7 @@ nav{
 	padding-top: 10px;
 	padding-bottom: 10px;
 	background-color: #CD0000;
-	font-family: 'myFirstFont';
+	font-family: 'Helvetic';
 	color: white;
 	font-weight: bolder;
 	font-size: 24px;
@@ -73,14 +73,14 @@ nav{
 	.title{
 		margin-top: 80px;
 		margin-bottom: 50px;
-		font-family: 'myFirstFont';
+		font-family: 'Helvetic';
 		color: #CD0000;
 		font-weight: bolder;
 		font-size: 28px;
 	}
-	.presentor {
+	.Presenter {
 		padding: 60px 0;
-		.presentor-text{
+		.Presenter-text{
 			font-size: 18px;
 			font-weight: 500;
 			text-align: justify;
@@ -106,7 +106,7 @@ footer{
 	padding-top: 20px;
 	padding-bottom: 20px;
 	background-color: #CD0000;
-	font-family: 'myThirdFont';
+	font-family: 'Helvetic';
 	font-weight: 200;
 	color: white;
 	font-size: 18px;
