--- a/public/css/presenters.css
+++ b/public/css/presenters.css
@@ -86,17 +86,17 @@ nav a:hover {
   font-size: 28px;
 }
 
-.main .Presenter {
+.main .presenter {
   padding: 60px 0;
 }
 
-.main .Presenter .Presenter-text {
+.main .presenter .Presenter-text {
   font-size: 18px;
   font-weight: 500;
   text-align: justify;
 }
 
-.main .Presenter .logo img {
+.main .presenter .logo img {
   width: 200px;
 }
 
