--- a/resources/sass/contact.scss
+++ b/resources/sass/contact.scss
@@ -6,7 +6,7 @@ hr {
 	margin-top: 30px;
 }
 header {
-	background-image: url('/images/Presenters.jpg');
+	background-image: url('/images/presenters.jpg');
 	background-size: cover;
 	min-height: 500px;
 	font-family: 'Helvetic';
