--- a/resources/sass/presenters.scss
+++ b/resources/sass/presenters.scss
@@ -78,7 +78,7 @@ nav{
 		font-weight: bolder;
 		font-size: 28px;
 	}
-	.Presenter {
+	.presenter {
 		padding: 60px 0;
 		.Presenter-text{
 			font-size: 18px;
