--- a/public/css/presenters.css
+++ b/public/css/presenters.css
@@ -21,7 +21,7 @@ hr {
 }
 
 header {
-  background-image: url("/images/Presenters.jpg");
+  background-image: url("/images/presenters.jpg");
   background-size: cover;
   min-height: 550px;
   font-family: "Helvetic";
