--- a/resources/sass/presenters.scss
+++ b/resources/sass/presenters.scss
@@ -21,7 +21,7 @@ hr {
 	margin-top: 30px;
 }
 header {
-	background-image: url('/images/Presenters.jpg');
+	background-image: url('/images/presenters.jpg');
 	background-size: cover;
 	min-height: 550px;
 	font-family: 'Helvetic';
