--- a/resources/sass/base.scss
+++ b/resources/sass/base.scss
@@ -18,10 +18,11 @@ nav{
 }
 .my-form{
 	.title{
-		color: #CD0000;
+		color: white;
 		font-size: 48px;
 		font-family: 'Helvetic';
 		margin-bottom: 20px;
+		font-weight: bolder;
 		background: transparent;
 	}
 	form{
@@ -90,6 +91,16 @@ nav{
 }
 
 .modal-content{
-	background: transparent;
-	border: none;
+	.modal-body{
+		background: #CD0000;
+		padding: 10px 50px 30px 50px ;
+		border-top: none;
+	}
+	
+	.modal-header{
+		background-image: url('/images/presenters.jpg');
+		min-height: 200px;
+		background-position: top right;
+		background-size: cover;
+	}
 }
