--- a/public/css/base.css
+++ b/public/css/base.css
@@ -1,8 +1,11 @@
+* {
+  font-family: Arial, Helvetica, sans-serif;
+}
+
 nav {
   padding-top: 10px;
   padding-bottom: 10px;
   background-color: #CD0000;
-  font-family: "Helvetic";
   color: white;
   font-weight: bolder;
   font-size: 24px;
@@ -19,7 +22,6 @@ nav a:hover {
 .my-form .title {
   color: white;
   font-size: 48px;
-  font-family: "Helvetic";
   margin-bottom: 20px;
   font-weight: bolder;
   background: transparent;
@@ -32,7 +34,6 @@ nav a:hover {
 }
 
 .my-form form .header {
-  font-family: "Helvetic";
   font-weight: bolder;
   margin-bottom: 30px;
   text-transform: uppercase;
@@ -77,7 +78,7 @@ nav a:hover {
   padding-right: 15px;
 }
 
-.my-form form .form-footer button {
+.my-form form .form-footer a.btn-outline-danger {
   height: 36px;
 }
 
@@ -88,9 +89,16 @@ nav a:hover {
 
 .my-form form .form-check label {
   font-size: 14px;
-  text-transform: uppercase;
   font-weight: bolder;
   padding-right: 200px;
+}
+
+.my-form form .form-check label a {
+  color: black;
+}
+
+.my-form form .form-check label a:hover {
+  color: black;
 }
 
 .modal-content .modal-body {
@@ -104,5 +112,11 @@ nav a:hover {
   min-height: 200px;
   background-position: top right;
   background-size: cover;
+}
+
+.schedule-content {
+  min-height: 500px;
+  font-size: 24px;
+  font-weight: 500;
 }
 
