--- a/resources/sass/base.scss
+++ b/resources/sass/base.scss
@@ -1,8 +1,12 @@
+
+*{
+	font-family: Arial, Helvetica, sans-serif;
+}
 nav{
 	padding-top: 10px;
 	padding-bottom: 10px;
 	background-color: #CD0000;
-	font-family: 'Helvetic';
+	
 	color: white;
 	font-weight: bolder;
 	font-size: 24px;
@@ -20,7 +24,7 @@ nav{
 	.title{
 		color: white;
 		font-size: 48px;
-		font-family: 'Helvetic';
+		
 		margin-bottom: 20px;
 		font-weight: bolder;
 		background: transparent;
@@ -30,7 +34,7 @@ nav{
 		padding: 50px;
 		border-radius: 30px;
 		.header{
-			font-family: 'Helvetic';
+			
 			font-weight: bolder;
 			margin-bottom: 30px;
 			text-transform: uppercase;
@@ -70,7 +74,7 @@ nav{
 				padding-left: 15px;
 				padding-right: 15px;
 			}
-			button{
+			a.btn-outline-danger{
 				height: 36px;
 			}
 		}
@@ -79,10 +83,15 @@ nav{
 			padding-bottom: 15px;
 			label{
 				font-size: 14px;
-				text-transform: uppercase;
+				
 				font-weight: bolder;
 				padding-right: 200px;
-
+				a {
+					color: black;
+					&:hover{
+						color: black;
+					}
+				}
 			}
 			
 		}
@@ -103,4 +112,10 @@ nav{
 		background-position: top right;
 		background-size: cover;
 	}
+}
+
+.schedule-content{
+	min-height: 500px;
+	font-size: 24px;
+	font-weight: 500;
 }
